@@ -243,9 +243,9 @@ static int sub__topic_tokenise(const char *subtopic, struct sub__token **topics)
 
 	stop = 0;
 	for(i=start; i<len+1; i++){
-		count++;
 		if(subtopic[i] == '/' || subtopic[i] == '\0'){
 			stop = i;
+			count++;
 
 			if(start != stop){
 				tlen = stop-start;
