@@ -3,6 +3,8 @@ Broker:
   not being set correctly. Closes #1429.
 - Fix incorrect memory tracking causing problems with memory_limit option.
   Closes #1437.
+- Fix subscription topics being limited to 200 characters instead of 200
+  hierarchy levels. Closes #1441.
 
 Client library:
 - Fix publish properties not being passed to on_message_v5 callback for QoS 2
